# better-code-review-graph

./: .dockerignore  .gitignore  .infisical.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  renovate.json  semantic-release.toml  server.json
.agents/skills/build-graph/: SKILL.md
.claude-plugin/: marketplace.json  plugin.json
.github/: best_practices.md
.github/workflows/: cd.yml  ci.yml
code_review_graph/: cli.py  graph.py
docs/: LLM-OPTIMIZED-REFERENCE.md
hooks/: hooks.json  session-start.sh
skills/review-delta/: SKILL.md
skills/review-pr/: SKILL.md
src/better_code_review_graph/: __init__.py  __main__.py  cli.py  embeddings.py  graph.py  incremental.py  parser.py  server.py  tools.py
src/better_code_review_graph/docs/: config.md  graph.md
tests/: conftest.py  test_cli.py  test_embeddings.py  test_embeddings_extra.py  test_graph.py  test_graph_extra.py  test_incremental.py  test_incremental_extra.py  test_live_mcp.py  test_multilang.py  test_parser.py  test_parser_extra.py  test_server.py  test_tools.py  test_tools_full.py
tests/fixtures/: sample_python.py
