[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "better-code-review-graph"
version = "1.0.2"
description = "Knowledge graph for token-efficient code reviews — fixed search, configurable embeddings, qualified call resolution"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = "==3.13.*"
authors = [{ name = "n24q02m" }]
keywords = ["code-review", "knowledge-graph", "tree-sitter", "claude-code", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0.0,<2",
    "fastmcp>=2.14.2,<3",
    "tree-sitter>=0.23.0,<1",
    "tree-sitter-language-pack>=0.3.0,<1",
    "networkx>=3.2,<4",
    "watchdog>=4.0.0,<6",
    "qwen3-embed>=1.5.0",
    "litellm>=1.0.0",
    "httpx",
    "pydantic-settings",
]

[project.scripts]
better-code-review-graph = "better_code_review_graph.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov",
    "pytest-timeout",
    "ruff>=0.8.6",
    "syrupy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/better_code_review_graph"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
possibly-missing-attribute = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
addopts = "--tb=short -q"
markers = ["integration: integration tests (deselect with '-m not integration')"]

[tool.coverage.run]
source = ["src/better_code_review_graph"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
